Update template and menu

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,9 +1,11 @@
+<% provide :page, 'players' %>
+
 <div class="page-header">
   <%= link_to new_player_path, class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-plus"></span>
     New Player
   <% end %>
-  <h1>Listing players</h1>
+  <h1>Players</h1>
 </div>
 
 <div class="table-responsive">
