--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Starter Template for Bootstrap</title>
+  <title>score-keeper</title>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -27,13 +27,25 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Project name", "#", class: "navbar-brand" %>
+        <%= link_to "score-keeper", "#", class: "navbar-brand" %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <% if user_signed_in? %>
+              <%
+                menu_items = [
+                    {name: 'games', href: games_path},
+                    {name: 'players', href: games_path},
+                ]
+              %>
+
+              <% page = yield(:page) %>
+
+              <% menu_items.each do |item_h| %>
+                <li class="<%= item_h[:name] == page ? 'active' : ''%>"><%= link_to item_h[:name].titleize, item_h[:href] %></li>
+              <% end %>
+          <% else %>
+          <% end %>
         </ul>
       </div>
     </div>
