--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,3 +1,5 @@
+<% provide :page, 'players' %>
+
 <div class="page-header">
   <%= link_to players_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
