Views to add, manage players

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
               <%
                 menu_items = [
                     {name: 'games', href: games_path},
-                    {name: 'players', href: games_path},
+                    {name: 'players', href: players_path},
                 ]
               %>
 
