--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(@player, html: { class: "form-horizontal", role: "form" }) do |f| %>
+<% remote = locals[:remote] %>
+
+<%= form_for(@player, html: { class: "form-horizontal", role: "form" }, remote: remote) do |f| %>
   <% if @player.errors.any? %>
     <div class="alert alert-danger alert-dismissable" role="alert">
       <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -12,21 +14,15 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :user_id, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.number_field :user_id, class: "form-control" %>
-    </div>
-  </div>
+    <%= f.hidden_field :user_id, value: current_user.id %>
+
   <div class="form-group">
     <%= f.label :name, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
+    <div class="col-sm-8">
       <%= f.text_field :name, class: "form-control" %>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit class: "btn btn-primary" %>
+    <div class="col-sm-2">
+      <%= f.submit 'Add', class: "btn btn-primary" %>
     </div>
   </div>
 <% end %>
