--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -5,7 +5,7 @@
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <h1>New player</h1>
+  <h1>New Player</h1>
 </div>
 
-<%= render 'form' %>
+<%= render partial: 'form' %>
