--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -9,14 +9,10 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
-  <h1>Show player</h1>
+  <h1>Player <%= @player.name %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt>User:</dt>
-  <dd><%= @player.user_id %></dd>
-
-  <dt>Name:</dt>
-  <dd><%= @player.name %></dd>
-
-</dl>
+<div class="row">
+  <div class="col-xs-12">
+  </div>
+</div>
