Basic Game display

--- a/app/views/players/_index.erb
+++ b/app/views/players/_index.erb
@@ -26,6 +26,6 @@
 
 <div class="col-xs-12">
   <h2>Add A Player</h2>
-  <%= render 'form', locals: {remote: true} %>
+  <%= render 'players/form', locals: {remote: true} %>
 </div>
 
