--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -12,18 +12,21 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :user_id, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.number_field :user_id, class: "form-control" %>
-    </div>
-  </div>
+    <%= f.hidden_field :user_id, value: current_user.id %>
   <div class="form-group">
     <%= f.label :name, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :name, class: "form-control" %>
     </div>
   </div>
+      <% current_user.players.each do |player| %>
+        <div class="form-group">
+          <%= f.label "players_#{player.id}", player.name, class: "col-sm-2 control-label" %>
+          <%= check_box 'game', "players", {class: "form-control", checked: false, multiple: true}, player.id, nil  %>
+          <%# f.label "players[#{player.id}]", player.name, class: "col-sm-2 control-label" %>
+          <%# check_box_tag "players[#{player.id}]", player.id, class: "form-control", checked: false %>
+        </div>
+      <% end %>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
