--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,18 +1,19 @@
+<% provide :page, 'games' %>
+
 <div class="page-header">
   <%= link_to new_game_path, class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-plus"></span>
     New Game
   <% end %>
-  <h1>Listing games</h1>
+  <h1>Games</h1>
 </div>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-            <th>User</th>
             <th>Name</th>
-            <th></th>
+            <th>Last Updated</th>
         <th></th>
         <th></th>
       </tr>
@@ -20,9 +21,8 @@
 
     <tbody>
       <%= content_tag_for(:tr, @games) do |game| %>
-            <td><%= game.user_id %></td>
-            <td><%= game.name %></td>
-            <td><%= link_to 'Show', game %></td>
+            <td><%= link_to game.name, game %></td>
+            <td><%= game.updated_at %></td>
         <td><%= link_to 'Edit', edit_game_path(game) %></td>
         <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
