--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,3 +1,5 @@
+<% provide :page, 'games' %>
+
 <div class="page-header">
   <%= link_to games_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
