--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,20 +1,39 @@
+<% provide :page, 'games' %>
+
 <div class="page-header">
-  <%= link_to games_path, class: 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Back
-  <% end %>
   <%= link_to edit_game_path(@game), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
-  <h1>Show game</h1>
+  <h1>Game <%= @game.name %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt>User:</dt>
-  <dd><%= @game.user_id %></dd>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="table-responsive">
+      <table class="table table-striped table-bordered table-hover table-game">
+        <thead>
+        <tr>
+          <th></th>
+          <% @players.each do |player| %>
+            <th><%= player.name %></th>
+          <% end %>
+        </tr>
+        </thead>
 
-  <dt>Name:</dt>
-  <dd><%= @game.name %></dd>
-
-</dl>
+        <tbody>
+        <% rounds = @game.rounds %>
+        <% rounds.each do |round_arr| %>
+          <% round, scores = round_arr %>
+          <tr>
+            <td><%= round %></td>
+            <%= content_tag_for(:td, @players) do |player| %>
+                <%= scores.select{|score| score.player_id == player.id}.first.score %>
+            <% end %>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
