--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,35 +1,31 @@
-<%= form_for(@game, html: { class: "form-horizontal", role: "form" }) do |f| %>
-  <% if @game.errors.any? %>
-    <div class="alert alert-danger alert-dismissable" role="alert">
-      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      <h4><%= pluralize(@game.errors.count, "error") %> prohibited this game from being saved:</h4>
+<div class="col-xs-12">
+  <%= form_for(@game, html: { class: "form-horizontal", role: "form" }) do |f| %>
+      <% if @game.errors.any? %>
+          <div class="alert alert-danger alert-dismissable" role="alert">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h4><%= pluralize(@game.errors.count, "error") %> prohibited this game from being saved:</h4>
 
-      <ul>
-      <% @game.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+            <ul>
+              <% @game.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
       <% end %>
+
+      <%= f.hidden_field :user_id, value: current_user.id %>
+      <h2>Name of the Game</h2>
+      <%= f.text_field :name, class: "form-control", placeholder: 'Name of the Game' %>
+
+      <h2>Players</h2>
+
+      <ul class="list-group">
+        <% current_user.players.each do |player| %>
+            <%= content_tag 'a', player.name, class: 'list-group-item selectable', id: "player_link_#{player.id}", data:{field: 'game[players]', value: player.id} %>
+        <% end %>
       </ul>
-    </div>
-  <% end %>
 
-    <%= f.hidden_field :user_id, value: current_user.id %>
-  <div class="form-group">
-    <%= f.label :name, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :name, class: "form-control" %>
-    </div>
-  </div>
-      <% current_user.players.each do |player| %>
-        <div class="form-group">
-          <%= f.label "players_#{player.id}", player.name, class: "col-sm-2 control-label" %>
-          <%= check_box 'game', "players", {class: "form-control", checked: false, multiple: true}, player.id, nil  %>
-          <%# f.label "players[#{player.id}]", player.name, class: "col-sm-2 control-label" %>
-          <%# check_box_tag "players[#{player.id}]", player.id, class: "form-control", checked: false %>
-        </div>
-      <% end %>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
-    </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
+
