--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -5,7 +5,9 @@
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <h1>New game</h1>
+  <h1>New Game</h1>
 </div>
 
-<%= render 'form' %>
+<div class="row">
+  <%= render 'form' %>
+</div>
