--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="table-responsive">
-      <table class="table table-striped table-bordered table-hover table-game">
+      <table class="table table-striped table-bordered table-hover table-game" id="score-table">
         <thead>
         <tr>
           <th></th>
@@ -30,7 +30,10 @@
             <td><%= round %></td>
             <% @players.each do |player| %>
                 <% score = scores.select{|score| score.player_id == player.id}.first %>
-                <%= content_tag :td, class: 'selectable', data: {field: 'game[scores]', value: score.id, form: '#score-control', actions: 'updateForm'} do %>
+                <%= content_tag :td, class: 'selectable', data: {field: 'game[scores]', value: score.id,
+                                                                 form: '#score-control',
+                                                                 score: score.score,
+                                                                 actions: 'updateForm,selectScore'} do %>
                   <%= score.score %>
                 <% end %>
             <% end %>
@@ -50,7 +53,9 @@
               <% end %>
           <% end %>
         </div>
+        <%= hidden_field_tag 'next-round', next_round %>
         <%= content_tag :button, 'Update Scores', class: 'btn btn-primary score-submit', type: 'button' %>
+        <%= content_tag :button, 'Add Round', class: 'btn btn-primary score-round', type: 'button' %>
     <% end %>
   </div>
 </div>
