Keep track of totals.  Add a round on demand.

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -19,3 +19,7 @@ a.list-group-item.selected:hover, .selected:hover {
   border-color: #5cb85c;
   color: white;
 }
+
+.score-total {
+  font-weight: bold;
+}
