Move some buttons around

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -23,3 +23,13 @@ a.list-group-item.selected:hover, .selected:hover {
 .score-total {
   font-weight: bold;
 }
+
+.space {
+  margin-bottom: 15px;
+}
+
+.score-buttons {
+  width: 255px;
+  margin: 0 auto;
+  display: block;
+}
