--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,12 @@
     <% end %>
 
     <%= yield %>
+
+    <div class="row footer">
+      <div class="col-xs-12">
+        &nbsp;
+      </div>
+    </div>
   </div>
 </body>
 </html>
