--- a/app/views/games/_score_table.erb
+++ b/app/views/games/_score_table.erb
@@ -5,7 +5,7 @@
       <tr>
         <th></th>
         <% @players.each do |player| %>
-            <th><%= player.name %></th>
+            <th class="player-modal" data-modal="#myModal" data-player="<%=player.id%>" data-game="<%=@game.id%>"><%= player.name %></th>
         <% end %>
       </tr>
       </thead>
@@ -69,4 +69,27 @@
       <%= hidden_field_tag 'id', @game.id %>
       <%# content_tag :button, 'Update Scores', class: 'btn btn-primary score-submit', type: 'submit' %>
   <% end %>
+</div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
