--- a/app/views/players/_scores.erb
+++ b/app/views/players/_scores.erb
@@ -1,5 +1,38 @@
-<ul>
-  <% @scores.each do |score| %>
-      <li>Round <%= score.round %> - <%=score.score%></li>
-  <% end %>
-</ul>
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <% @scores.size.times do |i| %>
+        <li data-target="#carousel-example-generic" data-slide-to="<%=i%>" class="<%= i==0 ? 'active' : ''%>"></li>
+    <% end %>
+  </ol>
+
+
+  <div class="carousel-inner" role="listbox">
+    <% @scores.each_with_index do |score, i| %>
+
+        <!-- Wrapper for slides -->
+        <div class="item <%= i==0 ? 'active' : ''%>">
+
+          <%= form_tag update_scores_path, remote: true do %>
+              <h3>Round <%= score.round %></h3>
+              <%= number_field_tag 'score', score.score, class: 'form-control' %>
+              <%= hidden_field_tag 'id', @game.id %>
+          <% end %>
+
+        </div>
+    <% end %>
+  </div>
+
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
