--- a/app/views/games/_score_table.erb
+++ b/app/views/games/_score_table.erb
@@ -72,6 +72,7 @@
 </div>
 
 <!-- Modal -->
+<%= form_tag update_scores_path, remote: true do %>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -84,8 +85,9 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="submit" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
+<% end %>
