--- a/app/views/players/_scores.erb
+++ b/app/views/players/_scores.erb
@@ -1,38 +1,40 @@
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <% @scores.size.times do |i| %>
-        <li data-target="#carousel-example-generic" data-slide-to="<%=i%>" class="<%= i==0 ? 'active' : ''%>"></li>
-    <% end %>
-  </ol>
-
-
+    <%= hidden_field_tag 'id', @game.id %>
+    <%= hidden_field_tag 'game[player_id]', @player.id %>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">
   <div class="carousel-inner" role="listbox">
-    <% @scores.each_with_index do |score, i| %>
+        <% @scores.each_with_index do |score, i| %>
 
-        <!-- Wrapper for slides -->
-        <div class="item <%= i==0 ? 'active' : ''%>">
+            <!-- Wrapper for slides -->
+            <div class="item <%= i==0 ? 'active' : ''%>">
 
-          <%= form_tag update_scores_path, remote: true do %>
               <h3>Round <%= score.round %></h3>
-              <%= number_field_tag 'score', score.score, class: 'form-control' %>
-              <%= hidden_field_tag 'id', @game.id %>
-          <% end %>
-
-        </div>
-    <% end %>
+              <%= number_field_tag "game[scores][#{score.id}]", score.score, class: 'form-control' %>
+            </div>
+        <% end %>
   </div>
+</div>
 
+<div class="row">
+  <div class="col-xs-12 carousel-navigation">
+    <!-- Indicators
+    <ol class="carousel-indicators">
+      <% @scores.size.times do |i| %>
+          <li data-target="#carousel-example-generic" data-slide-to="<%=i%>" class="<%= i==0 ? 'active' : ''%>"></li>
+      <% end %>
+    </ol>
+ -->
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    <!-- Controls -->
+    <a class="carousel-left" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+
+    <a class="carousel-right" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
 
